# rapier_examples

./: .gitignore  Cargo.toml  Dockerfile  README.md  run_build.sh
.github/workflows/: main.yaml
inputs/: bowling.json  box.json  convergent_users.json
lambda/builder/: Cargo.toml
lambda/builder/src/: main.rs  s3.rs
libs/renderer/: Cargo.toml
libs/renderer/src/: file_loader.rs  lib.rs  utils.rs
src/: block_loader.rs  cli.rs  file_loader.rs  main.rs  user.rs  utils.rs
tests/fixtures/: minimal.json  simple.json
