[package]
name = "rapier_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier2d = "0.17.2"
minimp4 =  { git = "https://github.com/darkskygit/minimp4.rs" }
openh264 = "0.4.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.48"
utc = "0.2.0"
image = "0.24.7"
chrono = "0.4.31"
imageproc = "0.23.0"
clap = { version = "4.3.21", features = ["derive"] }