[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier2d = "0.17.2"
openh264 = "0.4.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.48"
image = "0.24.7"

imageproc = "0.23.0"
minimp4 = "0.1.0"
